--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
+    "dev": "vuepress dev docs",
     "deploy": "bash deploy.sh"
   },
   "repository": {
