--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
     - name: install and build
       run: |
         npm install
-        npm run build
+        npm run docs:build
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@3.5.9
